# property_management

./: .gitignore  AGENTS.md  README.md
RentManagerV2/rentmanager-api/: .env.example  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
RentManagerV2/rentmanager-api/.github/workflows/: ci.yml
RentManagerV2/rentmanager-api/.keys/: private_key.pem  public_key.pem
RentManagerV2/rentmanager-api/migrations/: env.py
RentManagerV2/rentmanager-api/migrations/versions/: 0001_create_iam_schema.py  0002_create_assets_schema.py  0003_create_contracts_schema.py  0004_create_finance_schema.py  0005_create_iam_refresh_tokens.py  0006_extend_contract_documents_and_permissions.py
RentManagerV2/rentmanager-api/scripts/: seed_admin_user.py
RentManagerV2/rentmanager-api/src/rentmanager/: __init__.py  config.py  main.py
RentManagerV2/rentmanager-api/src/rentmanager/modules/assets/application/: dtos.py
RentManagerV2/rentmanager-api/src/rentmanager/modules/assets/domain/: entities.py  exceptions.py  repositories.py
RentManagerV2/rentmanager-api/src/rentmanager/modules/assets/infrastructure/: mappers.py  models.py  repositories_sqlalchemy.py
RentManagerV2/rentmanager-api/src/rentmanager/modules/assets/interfaces/: public_api.py
RentManagerV2/rentmanager-api/src/rentmanager/modules/contracts/domain/: entities.py  (+2 more)
RentManagerV2/rentmanager-api/src/rentmanager/shared_kernel/application/: unit_of_work.py
RentManagerV2/rentmanager-api/src/rentmanager/tests/integration/: test_assets.py  test_auth.py  test_contracts.py  test_docs_visibility.py  test_health.py
(+46 files in other folders)
