[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rentmanager-api"
version = "0.1.0"
description = "RentManager modular monolith API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115.0,<1.0.0",
	"uvicorn[standard]>=0.30.0,<1.0.0",
	"pydantic-settings>=2.4.0,<3.0.0",
	"SQLAlchemy>=2.0.36,<3.0.0",
	"alembic>=1.13.2,<2.0.0",
	"PyMySQL>=1.1.1,<2.0.0",
	"PyJWT>=2.9.0,<3.0.0",
	"bcrypt>=4.1.3,<5.0.0",
	"cryptography>=43.0.0,<45.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.0,<9.0.0",
	"httpx>=0.27.0,<1.0.0",
	"ruff>=0.6.0,<1.0.0",
	"mypy>=1.11.0,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/rentmanager/tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

